--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 /* navigation style here  */
 header{
     background-color: #562EFF;
-    padding: 25px;
+    padding: 18px;
     border-radius: 10px;
 }
     nav a{
@@ -31,6 +31,10 @@ header{
 
 
 /* common styles or utilities */
+.logo{
+    width: 41px;
+    padding-left: 20px;
+}
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
